--- a/styles/banner.css
+++ b/styles/banner.css
@@ -22,7 +22,7 @@
 	color: #fff;
 }
 .overlay-content h2{
-	color: #1e90ff;
+	color: #FEC12C;
 }
 .overlay-content , .spanassignment, .spanexam , .spannotes{
 	font-size: 30px;
@@ -53,7 +53,7 @@
 	background: #fff;	
 	transition: .5s ease all;
    }
-    a:hover{
+   nav a:hover{
     	background: #FD4935;
 		border-bottom: 4px solid #1e90ff;
 		color: #fff;
@@ -63,3 +63,91 @@
 		border-bottom: 4px solid #1e90ff;
 		color: #fff;
     }
+
+
+    /* ----------------technical surport ----------------*/
+ .technicalassistant{
+ 	width: 100%;
+ 	display: flex;
+ 	font-size: 24px;
+ }
+  .technicalassistant p{
+ 	font-size: 24px;
+ 	font-style: italic;
+ }
+ .technicalassistant span{
+ 	font-size: 24px;
+ 	font-style: italic;
+ }
+.technicalassistantimage{
+ width: 50%;
+}
+.technicalassistantdescription{
+	width: 45%;
+	padding: 1%;
+
+}
+.technical1{
+color: #FD4935;
+}
+.technical2{
+color: brown;
+}
+.technical3{
+color: #FD4935;
+}
+.footer{
+	width: 100%;
+	display: flex;
+
+}
+.rightfooter{
+ width: 50%;
+ border-bottom: 30px solid brown;
+ border-top: 2px solid brown;
+}
+.rightfooter a{
+	text-decoration :none;
+	color:#a8a8a8 ;
+}
+.leftfooter{
+ width: 50%;
+ border-bottom: 30px solid #FD4935;
+ border-top: 2px solid brown;
+ color: #a8a8a8 ;
+}
+.contacthead{
+	font-size: 34px;
+	color: brown;
+}
+
+/*-------------------small screens ------------------*/
+@media (max-width: 800px){
+	.technicalassistantimage{
+ width: 100%;
+}
+.technicalassistantdescription{
+	width: 100%;
+	padding: 1%;
+
+}
+ .technicalassistant{
+ 	display: block;
+ }
+ .footer{
+	width: 100%;
+	display: block;
+
+}
+.rightfooter{
+ width: 100%;
+ 
+ border-bottom: 30px solid brown;
+}
+.leftfooter{
+ width: 100%;
+ 
+ border-bottom: 30px solid #FD4935;
+ color: #a8a8a8 ;
+}
+}
