--- a/styles/banner.css
+++ b/styles/banner.css
@@ -1,5 +1,8 @@
+html{
+	scroll-behavior: smooth;
+}
 .bannerholder{
-	background: teal
+	background: #1e90ff;
 }
 .logoholder{
 	background: #1e90ff;
@@ -36,9 +39,6 @@
 .spannotes{
 	color: #FEC12C;
 }
-.main-content{
-	background: #FD4935;
-}
  .navbar{
  	height: 50px;
  	background:  #fff;
@@ -62,41 +62,11 @@
 		background: #FD4935;;
 		border-bottom: 4px solid #1e90ff;
 		color: #fff;
+		
     }
 
-
-    /* ----------------technical surport ----------------*/
- .technicalassistant{
- 	width: 100%;
- 	display: flex;
- 	font-size: 24px;
- }
-  .technicalassistant p{
- 	font-size: 24px;
- 	font-style: italic;
- }
- .technicalassistant span{
- 	font-size: 24px;
- 	font-style: italic;
- }
-.technicalassistantimage{
- width: 50%;
-}
-.technicalassistantdescription{
-	width: 45%;
-	padding: 1%;
-
-}
-.technical1{
-color: #FD4935;
-}
-.technical2{
-color: brown;
-}
-.technical3{
-color: #FD4935;
-}
-.footer{
+    /*----------------footer--------------------------*/
+    .footer{
 	width: 100%;
 	display: flex;
 
@@ -121,19 +91,11 @@ color: #FD4935;
 	color: brown;
 }
 
+
+   
 /*-------------------small screens ------------------*/
 @media (max-width: 800px){
-	.technicalassistantimage{
- width: 100%;
-}
-.technicalassistantdescription{
-	width: 100%;
-	padding: 1%;
 
-}
- .technicalassistant{
- 	display: block;
- }
  .footer{
 	width: 100%;
 	display: block;
@@ -150,4 +112,5 @@ color: #FD4935;
  border-bottom: 30px solid #FD4935;
  color: #a8a8a8 ;
 }
+
 }
