--- a/styles/account.css
+++ b/styles/account.css
@@ -89,6 +89,7 @@
   display: none;
 
 }
+
 .popupmenu a{
     padding: 10px 30% ;
   border-top-right-radius: 5px;
@@ -154,6 +155,51 @@ flex: 1 1 300px; /*  Stretching: */
   cursor: pointer;
 }
 
-
+/* enroll popup */
+.popupaddenroll{
+  font-size: 24px;
+   width: 300px;
+  background: #1e90ff;
+  text-align: center; 
+  position: absolute; 
+  top: 20%;
+    left: 0; 
+  right: 0; 
+  margin-left: auto; 
+  margin-right: auto;  
+  overflow: hidden;
+  display: none;
+  
+}
+.inputstyle{
+  min-width: 290px;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.submitbutton{
+ min-width: 290px;
+ padding: 12px 10px;
+ margin: 8px 0;
+ border-radius: 10px;
+ background: #1e90ff;
+ border: none;
+ color: #fff;
+  font-size: 20px;
+}
+#btncancelenroll:hover{
+  background: brown;
+}
+#btnsubmitenroll:hover{
+  background: #FEC12C;
+  color: brown;
+}
+.submitbutton:hover{
+  font-weight: bold;
+   cursor: pointer;
+}
 
 /*-------------------small screens ------------------*/
