--- a/styles/quizapp.css
+++ b/styles/quizapp.css
@@ -1,4 +1,11 @@
 
+.backhome{
+   float: left;
+   font-size: 20px;
+   margin-top: 20px;
+   margin-right: 20px;
+   cursor: pointer;
+}
 .username{
    float: right;
    font-size: 20px;
