--- a/styles/account.css
+++ b/styles/account.css
@@ -220,6 +220,9 @@ flex: 1 1 300px; /*  Stretching: */
   color: dodgerblue;
 
 }
+.strongtest{
+  font-weight: bold;
+}
 /* --------------show enrolled courses--------------*/
 .div100, .div200, .div300, .div400{
    display: none;
