--- a/styles/registration.css
+++ b/styles/registration.css
@@ -61,3 +61,37 @@ color: #fff;
 cursor: pointer;
 color: #fff;
 }
+
+.customalertframe{
+  position: fixed;
+  border-radius: 10px;
+  top: 30%;
+  left:50%;
+  width: 50%;
+  transform: translate(-50%,-50%);
+  border-radius: 10px;
+  background: white;
+  z-index: 9;
+  padding: 5px;
+}
+.alertframemessage{
+   border-top: 2px solid white;
+   padding: 5px;
+}
+
+.inforalert{
+  background: dodgerblue;
+  opacity: 0.9;
+}
+.erroralert{
+  background: red;
+  opacity: 0.9;
+}
+.successalert{
+  background: #0f3;
+  opacity: 0.8;
+ 
+}
+#myalert{
+  display: none;
+}
