--- a/styles/registration.css
+++ b/styles/registration.css
@@ -95,11 +95,11 @@ color: #fff;
 #myalert{
   display: none;
 }
-@media (max-width: 1000px){
+@media (max-width: 800px){
 	.inputstyle{
-		width: 80%;
+		min-width: 80%;
 	}
 	.submitbutton{
-		width: 80%;
+		min-width: 80%;
 	}
 }
