title bar modification

--- a/styles/banner.css
+++ b/styles/banner.css
@@ -6,6 +6,12 @@ html{
 }
 .logoholder{
 	background: #1e90ff;
+	padding: 10px;
+}
+.logoname{
+	float: right;
+	font-size: 32px;
+	margin-right: 20px;
 }
 .backgroung-image{
 	-webkit-background-size: cover;
