--- a/styles/readerpage.css
+++ b/styles/readerpage.css
@@ -74,6 +74,12 @@ width: 100%;
 	border-radius: 6px;
 
 }
+.unit-title{
+ color: dodgerblue;
+}
+.unit-title{
+ color: dodgerblue;
+}
 
 /* on smalll screens */
 @media(max-width: 850px){
