--- a/styles/profile.css
+++ b/styles/profile.css
@@ -1,22 +1,40 @@
 .maindisplay{
-	display: flex;
+	display: block;
+  background: white;
 }
 .profileavator{
-width: 300px;
-margin-left: 20px;
+ background: teal;
+ border-bottom-right-radius: 30%;
+ border-bottom-left-radius: 30%;
+ height: 25vw;
+ position: relative;
+}
+.image-holder{
+  position: absolute;
+  width: 50%;
+  background: #00000000;
+    top: 50%;
+  left:25%;
+  width: 50%;
+  max-height: 500px;
+  min-width: 300px;
+}
+.image-holder img{
+  border-radius: 50%; max-height: 300px; max-width: 300px;
 }
 .profiledetails{
-padding: 5px;
-width: 80%;
-margin-right: 10px;
-
+ background: dodgerblue;
+  border-top-right-radius: 30%;
+ border-top-left-radius: 30%;
+ height: 25vw;
+ margin-top: 200px;
 }
 .profiledetails label{
 font-size: 20px;
 font-weight: bold;
 }
 #btnaddimage{
-	width: 100%;
+	width: 50%;
 	padding: 4px 6px;
 	background: #00000000;
 	outline: none;
@@ -28,34 +46,11 @@ font-weight: bold;
 
 }
 .detail-holder{
-  background: #dcdcdc;
-  padding:  4px 6px;
-  width: 100%;
-  border-width: 3px;
-  border-bottom: solid black;
-  border-style: solid;
-  border-image: 
-    linear-gradient(
-      to bottom, 
-      black, 
-      rgba(0, 0, 0, 0)
-    ) 1 100%;
+ background: dodgerblue;
 }
 
 
 @media (max-width: 800px){
-.maindisplay{
-	display: block;
-}
-.profiledetails{
-padding: 5px;
-width: 95%;
-margin-right: 10px;
 
-}
-.profileavator{
-width: 95%;
-margin-left: 20px;
-}
 
 }
