--- a/styles/profile.css
+++ b/styles/profile.css
@@ -7,7 +7,8 @@
  border-bottom-right-radius: 30%;
  border-bottom-left-radius: 30%;
  height: 25vw;
- position: relative;
+ 
+ 
 }
 .image-holder{
   position: absolute;
@@ -16,15 +17,23 @@
     top: 50%;
   left:25%;
   width: 50%;
-
   max-height: 500px;
   min-width: 300px;
 }
 .image-holder img{
   border-radius: 50%; max-height: 300px; max-width: 300px;
 }
+.profile-enrolls{
+  background: #00000000;
+  width: 32%;
+}
+.profile-data{
+  width: 68%;
+  background: #00000000;
+}
 .profiledetails{
- background-image: linear-gradient(white, dodgerblue);
+  display: flex;
+ background-image: linear-gradient(white, #d5efff);
   border-top-right-radius: 30%;
  border-top-left-radius: 30%;
  margin-top: 200px;
@@ -63,10 +72,19 @@ font-weight: bold;
   overflow: hidden;
 }
 .profiledetails{
- background-image: linear-gradient(white, dodgerblue);
+  display: block;
+ background-image: linear-gradient(white, #d5efff);
   border-top-right-radius: 30%;
  border-top-left-radius: 30%;
  margin-top: 300px;
+}
+.profile-enrolls{
+  background: #00000000;
+  width: 100%;
+}
+.profile-data{
+  width: 100%;
+  background: #00000000;
 }
 
 }
