--- a/styles/adminquizcontrol.css
+++ b/styles/adminquizcontrol.css
@@ -1,4 +1,9 @@
-
+.quiz-nav{
+  display: none;
+}
+.user-nav{
+  display: none;
+}
 .quizinputholder{
   border:  4px solid #1e90ff;
 }
@@ -107,6 +112,7 @@
   border-radius: 4px;
   box-sizing: border-box;
   margin-left: 16PX;
+  float: left;
 
 }
 .time-selector{
