Design of admin dashbaord

--- a/styles/adminquizcontrol.css
+++ b/styles/adminquizcontrol.css
@@ -204,6 +204,93 @@
 .view-schedule , .add-schedule{
  display: none;
 }
+
+.main-totalusers{
+  background: #fff;
+  width: 80%;
+  margin-left: 10%;
+  border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
+  padding: 8px;
+  display: flex;
+ justify-content: center;
+ margin-bottom: 20px;
+}
+.largeText{
+  font-size: 24px;
+  font-weight: bold;
+}
+.smallText{
+  font-size: 18px;
+  font-weight: bold;
+}
+.dodgerblueText{
+  color: dodgerblue;
+}
+.brownText{
+  color: brown;
+}
+.enrolls-holder{
+  width: 100%;
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.enroll-card{
+      flex: 1 1 300px; /*  Stretching: */
+    flex: 0 1 300px; /*  No stretching: */
+    margin: 5px;
+    border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
+  padding: 8px;
+  background: #fff;
+
+}
+.scroll-table{
+  overflow: hidden;
+  overflow-x: scroll;
+}
+.table-holder{
+   background: #fff;
+   width: 80%;
+   min-width: 750px;
+  margin-left: 10%;
+  border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
+  padding: 8px;
+ margin-top: 20px;
+ margin-bottom: 20px;
+
+}
+.table-caption{
+  display: flex;
+ justify-content: center;
+  width: 100%;
+  border-bottom: 2px solid grey;
+}
+.table-holder table{
+  width: 100%;
+ }
+ .table-holder thead{
+  color: brown;
+  font-size: 21px;
+  text-align: center;
+  background-color: #fff;
+
+ }
+ .table-holder th{
+  padding: 12px 8px;
+
+ }
+  .table-holder td{
+    text-align: center;
+    font-size: 18px;
+    padding: 8px 6px;
+  }
+  .table-holder tbody tr:nth-child(odd){background-color: #f2f2f2;}
+  .table-holder tbody tr:hover{background-color: #ddd; }
+
+
  
  /* on smalll screens */
 
