Design of admin dashbaord

--- a/styles/adminquizcontrol.css
+++ b/styles/adminquizcontrol.css
@@ -296,11 +296,11 @@
 /* enroll popup */
 
 .scroll-analysis{
+  width: 80%;
   overflow: hidden;
   overflow-x: scroll;
-  background: teal;
+  background: #fff;
   padding: 8px;
-   text-align: center; 
   position: absolute; 
   top: 20%;
   left: 0; 
@@ -308,19 +308,20 @@
   margin-left: auto; 
   margin-right: auto;
   display: none;
+   border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
 
 }
 .analysis-holder{
    background: #fff;
-   width: 80%;
+   width: 98%;
    min-width: 750px;
-  margin-left: 1%;
   border: 1px solid #fff;
   box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
   padding: 8px;
- margin-top: 20px;
- margin-bottom: 20px;
-
+margin-left: auto; 
+  margin-right: auto;
+  color: dodgerblue;
 }
 
 
