--- a/styles/adminquizcontrol.css
+++ b/styles/adminquizcontrol.css
@@ -246,6 +246,24 @@
   background: #fff;
 
 }
+.report-holder{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.report-card{
+  flex: 1 1  300px;
+  flex: 0 1 300px;
+  box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.3);
+  margin: 5px;
+}
+.report-card-long{
+  flex: 1 1  400px;
+  flex: 0 1 400px;
+  box-shadow: 0 0 0.5em 0 rgba(0, 0, 0, 0.3);
+  margin: 5px;
+}
 .scroll-table{
   overflow: hidden;
   overflow-x: scroll;
