--- a/styles/adminquizcontrol.css
+++ b/styles/adminquizcontrol.css
@@ -273,17 +273,22 @@
 .scroll-table{
   overflow: hidden;
   overflow-x: scroll;
+
 }
 .table-holder{
    background: #fff;
    width: 80%;
    min-width: 750px;
+   height: 400px;
+  max-height: 400px;
   margin-left: 10%;
   border: 1px solid #fff;
   box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
   padding: 8px;
  margin-top: 20px;
  margin-bottom: 20px;
+ overflow: hidden;
+ overflow-y: auto;
 
 }
 .table-caption{
