--- a/styles/profile.css
+++ b/styles/profile.css
@@ -58,6 +58,25 @@ font-weight: bold;
  background: #00000000;
 }
 
+ /* enroll holder*/
+ .enrolls-holder{
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.enroll-card{
+      flex: 1 1 300px; /*  Stretching: */
+    flex: 0 1 300px; /*  No stretching: */
+    margin: 5px;
+    border: 1px solid #fff;
+  box-shadow: 0 0 0.5rem 0 rgba(0 ,0,0,0.3);
+  padding: 8px;
+  background: #fff;
+
+}
+
 
 @media (max-width: 800px){
 .image-holder{
